--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
